nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: my-nginx  # ⚠️ ต้องตรงกับ label ใน nginx-deployment.yaml เป๊ะๆ
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
